@@ -19,6 +19,6 @@
 
     "content_scripts": [{
         "js":["js/script.js"],
-    "matches":["https://*.folha.uol.com.br/*", "https://*.estadao.com.br/*", "https://*.oglobo.globo.com/*", "https://*.gazetadopovo.com.br/*", "https://*.super.abril.com.br/*", "https://*.quatrorodas.abril.com.br/*", "https://*.veja.abril.com.br/*", "https://*.vejasp.abril.com.br/*"]
+    "matches":["https://*.folha.uol.com.br/*", "https://*.estadao.com.br/*", "https://*.oglobo.globo.com/*", "https://*.gazetadopovo.com.br/*", "https://*.super.abril.com.br/*", "https://*.quatrorodas.abril.com.br/*", "https://*.veja.abril.com.br/*", "https://*.vejasp.abril.com.br/*", "https://*.respondeai.com.br/*"]
     }]
 }
