@@ -14,3 +14,4 @@ v1.0.5 [??/??/????]
 # Adicionado SuperInteressante;
 # Adicionado Quatro Rodas;
 # Adicionado VEJA;
+# [BETA] Adicionado Responde Ai
